# Master_Thesis

./: CMakeLists.txt  README.md
CNN/: test.py
TF_CNN/: CNN.py  Thesis_Train.ipynb  classes.txt  cnn.py  frozen_cnn.py  grape.py  optimize.py
hardware_spray/: Homing_function.ino  PanTiltMount.h  Pantilt.ino  SerialCom.ino  hardware_tests.ino  ros.ino  stepper.ino
hardware_spray/src/: Homing_function.ino
hardware_spray/src/SerialCom/: SerialCom.ino  sprayer.h
include/: camera.h  cnn.h
software_spray/: CMakeLists.txt  com.py
software_spray/include/: camera.h  inference.h
software_spray/src/: cnn_train.cpp  cnn_with_depthai.cpp  segmentation.cpp
software_spray/src/files/: best.onnx
software_spray/src/files/yolo8n_model/events/: events.out.tfevents.1679255792.1118cf52572d.1927.0  events.out.tfevents.1679271246.6a6363018599.1306.0  events.out.tfevents.1679306262.28e786b66168.909.0  events.out.tfevents.1679307780.28e786b66168.7544.0
software_spray/src/files/yolo8n_model/result_nano8_512/: best-simplified.onnx  best.json  best.xml
software_spray/src/files/yolo8n_model/result_nano8_640/: best-simplified.onnx  best.xml
software_spray/src/files/yolo8n_model/results/: args.yaml  results.csv
software_spray/src/files/yolo8n_model/weights/: best.onnx
software_spray/yolo_train/: check_train_data.py  commands.txt
software_spray/yolo_train/files/Run_Fusion_150epc/: events.out.tfevents.1678227220.12fb6d040eb2.5568.0  events.out.tfevents.1678280670.2e2bc1ea8598.1769.0  events.out.tfevents.1678302885.cd65660273de.2900.0  events.out.tfevents.1678303039.cd65660273de.3619.0  events.out.tfevents.1678304241.cd65660273de.8674.0  events.out.tfevents.1678325378.65be994f0006.1309.0  events.out.tfevents.1678367393.11f93914502b.1119.0  events.out.tfevents.1678378802.c947460c322d.1932.0  events.out.tfevents.1678405097.29a8621b272c.1290.0
software_spray/yolo_train/train_colab/: Thesis_Train.ipynb
src/: cnn_train.cpp  garbage.cpp  segmentation.cpp
src/files/: best.onnx  classes.txt
yolo_train/: check_train_data.py
yolo_train/files/Run_Fusion_150epc/: events.out.tfevents.1678292651.978ddea94e6d.1518.0  events.out.tfevents.1678303199.cd65660273de.4329.0  events.out.tfevents.1678304446.cd65660273de.9599.0  events.out.tfevents.1678313433.97e1d71419e9.2007.0  events.out.tfevents.1678313499.97e1d71419e9.2325.0  events.out.tfevents.1678368160.11f93914502b.4255.0  events.out.tfevents.1678383385.c947460c322d.21113.0  events.out.tfevents.1678388020.c947460c322d.40640.0  events.out.tfevents.1678407888.ea9ea1ecceab.5115.0  events.out.tfevents.1678457963.af362338abcd.7053.0  events.out.tfevents.1678457997.af362338abcd.7235.0  events.out.tfevents.1678465906.625a19e477aa.1192.0  opt.yaml  results.csv
